<package format="3">
  <name>my_robot</name>
  <version>0.0.1</version>
  <description>Mein ROS 2 Paket</description>
  <maintainer email="markus@example.com">Markus</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
