<?xml version="1.0"?>
<package format="3">
  <name>rosbot</name>
  <version>0.0.0</version>
  <description>The rosbot package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="ros@direcs.de">Markus Knapp</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <url type="website">https://direcs.de</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be ROS packages or system dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
